Add VM details and disk usage
